--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -115,7 +115,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.javax.persistence.jar}
+    ${file.reference.javax.persistence.jar}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
