index.jsp update, jstl tld files added

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -116,7 +116,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${libs.javaee-api-7.0.classpath}
+    ${libs.javaee-api-7.0.classpath}:\
+    ${libs.jstl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
