--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -115,9 +115,10 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.spring-framework400.classpath}:\
-    ${libs.jpa2-persistence.classpath}:\
     ${libs.javaee-api-7.0.classpath}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
